Analisis completo de casas de california

--- a/notebooks/00_setup_descarga_kaggle.ipynb
+++ b/notebooks/00_setup_descarga_kaggle.ipynb
@@ -467,6 +467,175 @@
     "print(\"Columnas:\", list(df_ca.columns))\n",
     "display(df_ca.dtypes.to_frame(\"dtype\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2820c1db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diccionario rápido guardado en: C:\\Users\\Usuario\\OneDrive\\Desktop\\Penguin\\analisis-de-datos\\reports\\tables\\california_diccionario.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>columna</th>\n",
+       "      <th>tipo_dato</th>\n",
+       "      <th>valores_nulos</th>\n",
+       "      <th>porcentaje_nulos</th>\n",
+       "      <th>ejemplo_valor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>longitude</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-122.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>latitude</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>housing_median_age</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>total_rooms</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>880.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>total_bedrooms</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>207</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>population</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>322.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>households</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>126.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>median_income</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>median_house_value</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>452600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ocean_proximity</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              columna tipo_dato  valores_nulos  porcentaje_nulos ejemplo_valor\n",
+       "0           longitude   float64              0               0.0       -122.23\n",
+       "1            latitude   float64              0               0.0         37.88\n",
+       "2  housing_median_age   float64              0               0.0          41.0\n",
+       "3         total_rooms   float64              0               0.0         880.0\n",
+       "4      total_bedrooms   float64            207               1.0         129.0\n",
+       "5          population   float64              0               0.0         322.0\n",
+       "6          households   float64              0               0.0         126.0\n",
+       "7       median_income   float64              0               0.0        8.3252\n",
+       "8  median_house_value   float64              0               0.0      452600.0\n",
+       "9     ocean_proximity    object              0               0.0      NEAR BAY"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# === Configuración ===\n",
+    "ROOT = Path.cwd().resolve().parent if Path.cwd().name == \"notebooks\" else Path.cwd()\n",
+    "REPORTS = ROOT / \"reports\" / \"tables\"\n",
+    "REPORTS.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# === Crear un resumen de columnas ===\n",
+    "diccionario = pd.DataFrame({\n",
+    "    \"columna\": df_ca.columns,\n",
+    "    \"tipo_dato\": [df_ca[c].dtype for c in df_ca.columns],\n",
+    "    \"valores_nulos\": [df_ca[c].isna().sum() for c in df_ca.columns],\n",
+    "    \"porcentaje_nulos\": [round(df_ca[c].isna().mean()*100, 2) for c in df_ca.columns],\n",
+    "    \"ejemplo_valor\": [df_ca[c].dropna().iloc[0] if df_ca[c].notna().any() else None for c in df_ca.columns]\n",
+    "})\n",
+    "\n",
+    "# Guardar en reports/tables/\n",
+    "out = REPORTS / \"california_diccionario.csv\"\n",
+    "diccionario.to_csv(out, index=False)\n",
+    "print(f\"Diccionario rápido guardado en: {out}\")\n",
+    "display(diccionario)"
+   ]
   }
  ],
  "metadata": {
